--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>
         Rock, Paper, Scissors, Lizzard, Spock
     </title>
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
-    <link rel="stylesheet" type="text/css" href="CSS/rps.css" />
+    <link href="css/styles.css" rel="stylesheet"/>
+    <link href="css/rps.css" rel="stylesheet"/>
 
 </head>
 
